--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -29,6 +29,6 @@ logoFile="logo.png"
 [[dependencies.morethanapickaxe]]
     modId="survivalplus"
     mandatory=true
-    versionRange="[0.1.3,]"
+    versionRange="[0.1.3,)"
     ordering="BEFORE"
     side="BOTH"
