--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ logoFile="logo.png"
 
 [[mods]]
     modId="morethanapickaxe"
-    version="0.1.3"
+    version="0.1.3b"
     updateJSONURL="https://coolsimulations.net/mcmods/morethanapickaxe/versionchecker.json"
     displayURL="https://www.curseforge.com/minecraft/mc-mods/more-than-a-pickaxe"
     displayName="More Than A Pickaxe"
@@ -17,7 +17,7 @@ logoFile="logo.png"
 [[dependencies.morethanapickaxe]]
     modId="forge"
     mandatory=true
-    versionRange="[32,)"
+    versionRange="[32.0.105,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.morethanapickaxe]]
@@ -29,6 +29,6 @@ logoFile="logo.png"
 [[dependencies.morethanapickaxe]]
     modId="survivalplus"
     mandatory=true
-    versionRange="[0.1.3,)"
+    versionRange="[0.1.3b,)"
     ordering="BEFORE"
     side="BOTH"
