--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 
 def mcVersion = "1.14.4"
-def modVersion = "0.1.3"
+def modVersion = "0.1.4"
 version = "${mcVersion}-${modVersion}"
 group = "net.coolsimulations.MoreThanAPickaxe" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "MoreThanAPickaxe"
@@ -74,8 +74,14 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.14.4-28.1.20'
 
-    compile files('libs/SurvivalPlus-API-1.14.4-0.1.3.jar')
+    compile files('libs/SurvivalPlus-API-1.14.4-0.1.4.jar')
     compile files('libs/lumberjack-API-2.0.0.jar')
+    compile files('libs/Emerald+and+Obsidian+Addons-API-v1.0+-1.14.4.jar')
+    compile files('libs/Gems+and+Crystals-API-1.14.4-1.2.7.jar')
+    compile files('libs/TriGemsMC-API-1.14.4-1.0.1.jar')
+    compile files('libs/OTA-API-2.02.jar')
+    compile files('libs/Vulcanite-API-2.0.4-mc1.14.4.jar')
+    compile files('libs/carbonado-API-2.0.2-mc1.14.4.jar')
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
