--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 
 def mcVersion = "1.15.2"
-def modVersion = "0.1.3"
+def modVersion = "0.1.4"
 version = "${mcVersion}-${modVersion}"
 group = "net.coolsimulations.MoreThanAPickaxe" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "MoreThanAPickaxe"
@@ -72,10 +72,18 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.15.2-31.2.9'
+    minecraft 'net.minecraftforge:forge:1.15.2-31.2.35'
 
-    compile files('libs/SurvivalPlus-API-1.15.2-0.1.3.jar')
+    compile files('libs/SurvivalPlus-API-1.15.2-0.1.4.jar')
     compile files('libs/lumberjack-API-2.0.0.jar')
+    compile files('libs/ExtendedNetherBackport-API-1.15.2-Beta-4.1.2.jar')
+    compile files('libs/futuremc-API-1.15.2-1.0.1.jar')
+    compile files('libs/Gems+and+Crystals-API-1.15.2-1.2.9.jar')
+    compile files('libs/sm-API-1.15.2-1.2.4.jar')
+    compile files('libs/OTA-API-2.02.jar')
+    compile files('libs/Vulcanite-API-2.1.2-mc1.15.2.jar')
+    compile files('libs/carbonado-API-2.0.7-mc1.15.2.jar')
+    compile files('libs/jei-1.15.2-6.0.3.15-api.jar')
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
