--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 
-def mcVersion = "1.16.3"
+def mcVersion = "1.16.4"
 def modVersion = "0.1.4"
 version = "${mcVersion}-${modVersion}"
 group = "net.coolsimulations.MoreThanAPickaxe" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -26,7 +26,7 @@ minecraft {
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'snapshot', version: '20200514-1.16'
+    mappings channel: 'snapshot', version: '20201028-1.16.3'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
     
     // accessTransformer = file('build/resources/main/META-INF/accesstransformer.cfg')
@@ -72,15 +72,15 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.16.3-34.0.9'
+    minecraft 'net.minecraftforge:forge:1.16.4-35.0.15'
 
-    compile files('libs/SurvivalPlus-API-1.16.3-0.1.4.jar')
+    compile files('libs/SurvivalPlus-API-1.16.4-0.1.4c.jar')
     compile files('libs/lumberjack-API-2.0.0.jar')
-    compile files('libs/Gems+and+Crystals-API-1.16.3-1.2.9.jar')
-    compile files('libs/sm-API-1.16.3-1.2.4.jar')
+    compile files('libs/Gems+and+Crystals-API-1.16.4-1.2.9.jar')
+    compile files('libs/sm-API-1.16.4-1.2.4.jar')
     compile files('libs/OTA-API-2.02.jar')
-    compile files('libs/SimpleEmeraldMod-API-1.16.2.jar')
-    compile files('libs/EasyEmerald-API-1.16.3-1.0.9.jar')
+    compile files('libs/SimpleEmeraldMod-API-1.16.4.jar')
+    compile files('libs/EasyEmerald-API-1.16.4-1.0.9.jar')
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
