--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[34,]"
+loaderVersion="[35,]"
 issueTrackerURL="http://github.com/coolsimulations/morethanapickaxe/issues/"
 logoFile="logo.png"
 license="All rights reserved"
@@ -18,18 +18,18 @@ license="All rights reserved"
 [[dependencies.morethanapickaxe]]
     modId="forge"
     mandatory=true
-    versionRange="[34.0.9,)"
+    versionRange="[35.0.15,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.morethanapickaxe]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16.3]"
+    versionRange="[1.16.4]"
     ordering="NONE"
     side="BOTH"
 [[dependencies.morethanapickaxe]]
     modId="survivalplus"
     mandatory=true
-    versionRange="[0.1.4,)"
+    versionRange="[0.1.4c,)"
     ordering="BEFORE"
     side="BOTH"
