--- a/src/main/resources/data/morethanapickaxe/advancements/recipes/sapphire_adze.json
+++ b/src/main/resources/data/morethanapickaxe/advancements/recipes/sapphire_adze.json
@@ -11,7 +11,7 @@
       "conditions": {
         "items": [
           {
-            "tag": "forge:gems/sapphire"
+            "tag": "c:sapphires"
           }
         ]
       }
