--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.0.105', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 
 def mcVersion = "1.14.4"
-def modVersion = "0.1.4"
+def modVersion = "0.1.5"
 version = "${mcVersion}-${modVersion}"
 group = "net.coolsimulations.MoreThanAPickaxe" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "MoreThanAPickaxe"
@@ -74,7 +74,7 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.14.4-28.1.20'
 
-    compile files('libs/SurvivalPlus-API-1.14.4-0.1.4.jar')
+    compile files('libs/SurvivalPlus-API-1.14.4-0.1.5.jar')
     compile files('libs/lumberjack-API-2.0.0.jar')
     compile files('libs/Emerald+and+Obsidian+Addons-API-v1.0+-1.14.4.jar')
     compile files('libs/Gems+and+Crystals-API-1.14.4-1.2.7.jar')
