--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ sourceSets.main.resources.srcDirs += 'resources'
 dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+	mappings minecraft.officialMojangMappings()
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
@@ -35,7 +35,7 @@ dependencies {
 
 	modImplementation "me.shedaniel:RoughlyEnoughItems:${project.rei_version}"
 
-        compile files('libs/SurvivalPlus-Fabric-1.16.5-0.1.4d-API.jar')
+        compile files('libs/SurvivalPlus-Fabric-1.16.5-0.1.5-API.jar')
 
         compile files('libs/vanillaenhanced-1.5.0-Dev.jar')
 
