--- a/build.gradle
+++ b/build.gradle
@@ -5,20 +5,20 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 
-def mcVersion = "1.16.5"
+def mcVersion = "1.17.1"
 def modVersion = "0.1.5"
 version = "${mcVersion}-${modVersion}"
 group = "net.coolsimulations.MoreThanAPickaxe" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "MoreThanAPickaxe"
 
-sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
+java.toolchain.languageVersion = JavaLanguageVersion.of(16)
 
 minecraft {
     hideOfficialWarningUntilChanged
@@ -34,7 +34,7 @@ minecraft {
     //
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'official', version: '1.16.5'
+    mappings channel: 'official', version: '1.17.1'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
     
     // accessTransformer = file('build/resources/main/META-INF/accesstransformer.cfg')
@@ -80,15 +80,9 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.16.5-36.1.20'
+    minecraft 'net.minecraftforge:forge:1.17.1-37.0.12'
 
-    compile files('libs/SurvivalPlus-API-1.16.5-0.1.5.jar')
-    compile files('libs/lumberjack-API-2.0.0.jar')
-    compile files('libs/Gems+and+Crystals-API-1.16.4-1.2.9.jar')
-    compile files('libs/sm-API-1.16.4-1.2.4.jar')
-    compile files('libs/OTA-API-2.02.jar')
-    compile files('libs/SimpleEmeraldMod-API-1.16.4.jar')
-    compile files('libs/EasyEmerald-API-1.16.5-1.0.25.jar')
+    implementation fileTree(dir: 'libs', include: '*.jar')
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
@@ -107,6 +101,8 @@ dependencies {
     // For more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
+
+    processResources.setDuplicatesStrategy(DuplicatesStrategy.WARN)
 
 }
 
