--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 0.1.5
+	mod_version = 0.1.5b
 	maven_group = net.coolsimulations.MoreThanAPickaxe
 	archives_base_name = MoreThanAPickaxe-Fabric-1.17.1
 
