--- a/src/main/resources/data/morethanapickaxe/recipes/sapphire_adze.json
+++ b/src/main/resources/data/morethanapickaxe/recipes/sapphire_adze.json
@@ -15,5 +15,11 @@
   },
   "result": {
     "item": "morethanapickaxe:sapphire_adze"
-  }
+  },
+  "conditions": [
+    {
+      "item": "morethanapickaxe:sapphire_adze",
+      "type": "forge:item_exists"
+    }
+  ]
 }
