--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,17 @@
 plugins {
-	id 'fabric-loom' version '0.5-SNAPSHOT'
+	id 'fabric-loom' version '0.7-SNAPSHOT'
 	id 'maven-publish'
+}
+
+repositories {
+	maven {
+		name = 'TerraformersMC'
+		url = 'https://maven.terraformersmc.com/'
+	}
+	maven {
+		name = 'SheDaniel'
+		url = 'https://maven.shedaniel.me/'
+	}
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -28,7 +39,7 @@ dependencies {
 
 	modImplementation "me.shedaniel:RoughlyEnoughItems:${project.rei_version}"
 
-        compile files('libs/SurvivalPlus-Fabric-1.15.2-0.1.5-API.jar')
+        compile files('libs/SurvivalPlus-Fabric-1.15.2-0.1.5b-API.jar')
 
         compile files('libs/vanillaenhanced-0.3.0-Dev.jar')
 
