--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.5-SNAPSHOT'
+	id 'fabric-loom' version '0.7-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -7,6 +7,10 @@ repositories {
 	maven {
 		name = 'TerraformersMC'
 		url = 'https://maven.terraformersmc.com/'
+	}
+	maven {
+		name = 'SheDaniel'
+		url = 'https://maven.shedaniel.me/'
 	}
 }
 
@@ -35,7 +39,7 @@ dependencies {
 
 	modImplementation "me.shedaniel:RoughlyEnoughItems:${project.rei_version}"
 
-        compile files('libs/SurvivalPlus-Fabric-1.16.5-0.1.5-API.jar')
+        compile files('libs/SurvivalPlus-Fabric-1.16.5-0.1.5b-API.jar')
 
         compile files('libs/vanillaenhanced-1.5.0-Dev.jar')
 
