--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,20 @@
 plugins {
-	id 'fabric-loom' version '0.8-SNAPSHOT'
+	id 'fabric-loom' version '0.10-SNAPSHOT'
 	id 'maven-publish'
 }
 
 repositories {
 	maven {
 		name = 'TerraformersMC'
-		url = 'https://raw.githubusercontent.com/TerraformersMC/Archive/main/releases/'
+		url = 'https://maven.terraformersmc.com/'
 	}
 	maven {
 		name = 'SheDaniel'
 		url = 'https://maven.shedaniel.me/'
+	}
+	maven {
+		name = 'JamiesWhiteShirt'
+		url = 'https://maven.jamieswhiteshirt.com/libs-release/'
 	}
 }
 
@@ -38,6 +42,8 @@ dependencies {
 	modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_version}"
 
 	modImplementation "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
+
+	modImplementation "com.jamieswhiteshirt:reach-entity-attributes:${project.entity_attributes_version}"
 
         implementation fileTree(dir: 'libs', include: '*.jar')
 
