--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx3G
 	loader_version=0.12.11
 
 # Mod Properties
-	mod_version = 0.1.6
+	mod_version = 0.1.6b
 	maven_group = net.coolsimulations.MoreThanAPickaxe
 	archives_base_name = MoreThanAPickaxe-Fabric-1.17.1
 
