--- a/src/main/resources/data/morethanapickaxe/recipes/sapphire_adze.json
+++ b/src/main/resources/data/morethanapickaxe/recipes/sapphire_adze.json
@@ -15,5 +15,14 @@
   },
   "result": {
     "item": "morethanapickaxe:sapphire_adze"
-  }
+  },
+  "fabric:load_conditions": [
+    {
+      "condition": "fabric:any_mods_loaded",
+      "values": [
+        "more_gems",
+        "vanillaenhanced"
+      ]
+    }
+  ]
 }
