--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx3G
 	loader_version=0.13.3
 
 # Mod Properties
-	mod_version = 0.1.6b
+	mod_version = 0.1.6c
 	maven_group = net.coolsimulations.MoreThanAPickaxe
 	archives_base_name = MoreThanAPickaxe-Fabric-1.18.2
 
