--- a/src/main/resources/data/morethanapickaxe/recipes/sapphire_adze.json
+++ b/src/main/resources/data/morethanapickaxe/recipes/sapphire_adze.json
@@ -18,10 +18,11 @@
   },
   "fabric:load_conditions": [
     {
-      "condition": "fabric:any_mods_loaded",
+      "condition": "fabric:any_mod_loaded",
       "values": [
         "more_gems",
-        "vanillaenhanced"
+        "vanillaenhanced",
+        "enriched"
       ]
     }
   ]
