--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ license="All rights reserved"
 
 [[mods]]
     modId="morethanapickaxe"
-    version="0.1.6b"
+    version="0.1.6c"
     updateJSONURL="https://coolsimulations.net/mcmods/morethanapickaxe/versionchecker.json"
     displayURL="https://www.curseforge.com/minecraft/mc-mods/more-than-a-pickaxe"
     displayName="More Than A Pickaxe"
@@ -18,7 +18,7 @@ license="All rights reserved"
 [[dependencies.morethanapickaxe]]
     modId="forge"
     mandatory=true
-    versionRange="[41.0.1,]"
+    versionRange="[41.0.94,]"
     ordering="NONE"
     side="BOTH"
 [[dependencies.morethanapickaxe]]
