--- a/src/main/resources/data/morethanapickaxe/recipes/sapphire_adze.json
+++ b/src/main/resources/data/morethanapickaxe/recipes/sapphire_adze.json
@@ -21,7 +21,8 @@
       "condition": "fabric:any_mod_loaded",
       "values": [
         "more_gems",
-        "enriched"
+        "enriched",
+        "techreborn"
       ]
     }
   ]
